--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,14 @@
 #c0dfd9
 */
 
-
-/* Background Image*/
-body {
+.maincontent{
+  position: absolute;
+  top: 50px;
+  bottom: 30px;
+  right: 0;
+  left: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
   background-image: linear-gradient(to top, #ffffff,#c0dfd9);
   background-repeat: no-repeat;
   color: #3b3a36;
@@ -64,39 +69,6 @@ textarea {
   align-self: center;
 }
 
-.useractioncontainer {
-  background-color: #b3c2bf;
-  margin-left: 10px;
-}
-
-.useractionlist {
-  list-style: none;
-  font-size: 1.30em;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.useractionlist li {
-  display:block;
-  text-decoration:none;
-  border-bottom: 1px solid black;
-  margin-bottom: 10px;
-}
-
-.useractionlist li a {
-  color: #3b3a36;
-}
-
-.useractionlist *:hover {
-  background-color: #3b3a36;
-  color: #c0dfd9;
-  text-decoration:none;
-}
-
-/* User.indes.hmtl */
-.userlist {
-  list-style: none;
-}
 
 /* Devise Views */
 .accountformcontainer {
@@ -104,6 +76,7 @@ textarea {
   height: auto;
   max-width:350px;
   margin: auto;
+  margin-top: 15px;
   padding:15px;
   text-align: center;
   border-radius: 10px;
