--- a/app/views/chats/moderatorshow.html.erb
+++ b/app/views/chats/moderatorshow.html.erb
@@ -1,36 +1,40 @@
-<h1>Modd</h1>
-<% content_for :title, @chat.project.title  %>
-<p>
-  <strong>Deadline:</strong>
-  <%= @chat.deadline %>
-</p>
+<% content_for :title, @project.title  %>
 <div class="container">
   <div class="row">
     <div class="col-md-8 chatcontainer">
-      <h3>Topic Goes Here</h3>
-      <hr>
-      <script type="text/javascript">
-        var currentdate = new Date(); 
-        var endTime = "Last Sync: " + currentdate.getDate() + "/"
-        + (currentdate.getMonth()+1)  + "/" 
-        + currentdate.getFullYear() + " @ "  
-        + (currentdate.getHours()+1) + ":"  
-        + currentdate.getMinutes() + ":" 
-        + currentdate.getSeconds();
-        $('div#clock').countdown(endTime.toString());
-        $('#clock').countdown('2020/10/10').on('update.countdown', function(event) {
-        var $this = $(this).html(event.strftime('' + '<span>%H</span> Hours ' + '<span>%M</span> Minutes ' + '<span>%S</span> Seconds'));
-        });
-      </script>
-      <div id="clock"></div>
-      <div class="scrollable-chatview">
-        <div class="row-fluid">
-          <div id="messages" data-chat-id="<%= @chat.id %>">
-            <%= render @chat.messages %>
-          </div>
+      <div class="row">
+        <div class="col-md-6">
+          <% if @currenttopic %>
+            <h3><%= @currenttopic.title %> </h3>
+            <h6><%= @currenttopic.information %> </h3>
+          <% else %>
+            <h3>No Topic Selected </h3>
+            <h6>Moderator has to Set a Topic </h3>
+          <% end %>  
+        </div>
+        <div class="col-md-6">
+          <script type="text/javascript">
+            var currentdate = new Date(); 
+            var endTime = "Last Sync: " + currentdate.getDate() + "/"
+            + (currentdate.getMonth()+1)  + "/" 
+            + currentdate.getFullYear() + " @ "  
+            + (currentdate.getHours()+1) + ":"  
+            + currentdate.getMinutes() + ":" 
+            + currentdate.getSeconds();
+            $('div#clock').countdown(endTime.toString());
+            $('#clock').countdown('2020/10/10').on('update.countdown', function(event) {
+            var $this = $(this).html(event.strftime('' + '<span>%H</span> Hours ' + '<span>%M</span> Minutes ' + '<span>%S</span> Seconds'));
+            });
+          </script>
+          <div id="clock"></div>
+        </div>
+      </div>      
+      <div class="row-fluid">
+        <div class="scrollable-chatview" id="messages" data-chat-id="<%= @chat.id %>">
+          <%= render @chat.messages %>
         </div>
       </div>
-      <hr>
+      <hr>  
       <div class="chat-input">
         <div class="row">
           <%= form_for @message, url: '#' do |f| %>
@@ -44,35 +48,43 @@
           <% end %>
         </div>
       </div>
-    </div>
-    <div id="topics" data-chat-id="<%= @chat.id %>">
-        <%= render @chat.topics %>
-    </div>
+    </div>   
     <div class="topics-panel col-md-4">
-      <%= form_for @topic, url: '#' do |t| %>
+      <%= form_for([@project,@chat,@topic]) do |t|%>
         <%= hidden_field_tag 'chat_id', @chat.id %>
+        <h5>Create new Topic</h5>
         <div class="form-group">
-            <p>New Topic</p>
-            <%= t.text_field :title %><br>
-            <%= t.submit %>
+          <%= t.label :title, 'Topic Title' %><br>
+          <%= t.text_field :title, class: 'form-control' %><br>
+          <%= t.label :title, 'Topic Information' %>
+          <%= t.text_field :information, class: 'form-control' %><br>
+          <%= t.submit %>
         </div>
       <% end %>
-      <div class="result-container">
-        <div class="form-group">
-          <label for="comment">Result:</label>
-          <textarea class="form-control" rows="10" id="comment"></textarea>
-          <button type="button" class="btn btn-success saveresult">Save Result</button>
-        </div> 
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <button type="button" class="btn btn-success starttimerbutton" onclick="$('div#clock').countdown('start');">Start Timer</button>
+      <h5>Change Current Topic</h5>
+      <div id="topics" data-chat-id="<%= @chat.id %>">
+        <div class="actions">
+          <%= form_for @chat, url: nexttopic_project_chat_path(:chat_id => @chat.id), method: :patch, remote: true do |f| %>
+            <%= f.collection_select :currenttopic_id, @chat.topics.order(:id), :id, :title, required: true %>
+            <%= f.submit "Chose selected Topic", class: "btn btn-large btn-primary" %>
+          <% end %>
         </div>
-        <div class="col-md-6">
-          <button type="button" class="btn btn-danger pausetimerbutton" onclick="$('div#clock').countdown('pause');">Pause Timer</button>
-        </div>
-      </div>
+      </div>  
     </div>
+    <hr>
+    <% unless @currenttopic.nil? %>
+      <div class="results-panel col-md-4">
+        <%= form_for([@project,@chat,@topic_result]) do |r|%>
+          <%= r.hidden_field :topic_id, :value => @currenttopic.id %>
+          <h5>Write down results to current Topic</h5>
+          <div class="form-group">
+              <%= r.label :results, 'Results' %><br>
+              <%= r.text_area :results, class: 'form-control resultinput' %><br>
+              <%= r.submit %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
-
+</div>
