--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <% content_for :title, "Register" %>
 <div class="center-block accountformcontainer">
-  <%= devise_error_messages! %>
   <h1>Sign up</h1>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :validate => true) do |f| %>
+    <%= render 'layouts/error_messages', object: resource %>
     <div class="field">
       <%= f.text_field :first_name, autofocus: true, :placeholder => "First Name" %>
     </div>
