--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
   <body>
   	<%= render 'shared/navbar' %> 
-    <%= yield %>
+    <div class="maincontent">
+      <%= yield %>  
+    </div>
     <%= render 'shared/footer' %>
   </body>
 </html>
