--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-md-12">
         <p class="card-text">
-          <span class="text-muted"><%= message.user.first_name %> at <%= message.timestamp %> says</span><br>
-          <%= message.body %>
+          <span class="text-muted"><%= message.user.first_name %> <%= message.user.last_name %>  <%= message.timestamp %></span><br>
+          <div class="message-content"><%= message.body %></div>
         </p>
       </div>
     </div>
