--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,6 +6,7 @@
 		<th>Project Title</th>
 		<th>Information</th>
 		<th>Projectleader</th>
+		<th>Satus</th>
         <th>Options</th>
 	</thead>
 	<tbody>
@@ -21,6 +22,13 @@
 	    			<td>
 	    				<%= project.projectleader.email %>
 	    			</td>
+	    			<td>
+	    				<% if project.completed %>
+					    	Completed
+					    <% else %>
+					    	Running
+					    <% end %>
+	    			</td>
 	                <td>
 	                    <div class="dropdown">
 	                        <button class="btn btn-primary dropdown-toggle projectbutton" type="button" data-toggle="dropdown">
@@ -30,12 +38,14 @@
 	                            <li>
 	                                <%= link_to "Details", project_path(:id => project.id )  %>   
 	                            </li>
-	                            <li>
-	                                <%= link_to "Edit", edit_project_path(:id => project.id )  %>   
-	                            </li>
-	                            <li>
-	                                <%= link_to 'Delete', project_path(:id => project.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
-	                            </li>
+	                            <% if  current_user.email == project.projectleader.email  %>
+	                            	<li>
+	                                	<%= link_to "Edit", edit_project_path(:id => project.id )  %>   
+	                            	</li>
+	                            	<li>
+	                                	<%= link_to 'Delete', project_path(:id => project.id), data: {:confirm => 'Are you sure?'}, :method => :delete %>
+	                            	</li>
+	                            <% end %>	                       
 	                        </ul>
 	                    </div>
 	                </td>
@@ -46,8 +56,16 @@
 		<% end %>
 	</tbody>
 </table>
-<%= form_tag(projects_path, :method => "get", id: "search-form") do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Search Projects" %>
-    <%= submit_tag "Search" %>
-<% end %>
-<%= button_to "Create new Project", new_project_path, :method => :get %>
+<div class="row">
+	<div class="col-md-3">
+		<%= form_tag(projects_path, :method => "get", id: "search-form") do %>
+		    <%= text_field_tag :search, params[:search], placeholder: "Search Projects" %>
+		    <%= submit_tag "Search", class: "searchbutton" %>
+		<% end %>
+	</div>
+	<div class="col-md-3 offset-md-6">
+		<% if current_user.role.name != 'user' %>
+			<%= button_to "Create new Project", new_project_path, :method => :get %>
+		<% end %>
+	</div>
+</div>                       
